--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     </head>
     <body>
-        <h1><img src="FiacoLine.png" border="10"></h1>
+        <h1><img src="FiacoLine.png"></h1>
          <p style="color:white"> /melhor podcast que o brasil não quer</p> 
     
     </body>
