--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1><img src="FiacoLine.png"></h1>
-         <p style="color:white"> /melhor podcast que o brasil não quer</p> 
+         <p style="color:white"> /melhor podcast que o Brasil não quer</p> 
     
     </body>
 </html>
