--- a/index.html
+++ b/index.html
@@ -1,18 +1,87 @@
-<!DOCTYPE html>
-<html>
-    <body bgcolor="#000000"></body>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=divice-width, initial-scale=1">
-        <title>Fiasco</title>
-<div style="width: 25%; height: 1080px; overflow: auto; scrollbar-face-color: #CE7E00; scrollbar-shadow-color: #FFFFFF; br /scrollbar-highlight-color: #6F4709; scrollbar-3dlight-color:#11111; scrollbar-darkshadow-color: #6F4709; br /scrollbar-track-color: #FFE8C1; scrollbar-arrow-color: #6F4709;">
-    </head>
-    <body>
-        <h1><img src="FiacoLine.png"></h1>
-         <p style="color:white"> - melhor podcast que o Brasil não quer -</p> 
-    
-    </body>
-</html>
-
-
-
+<div id="ih4v">
+  <meta charset="utf-8" id="idy6"/>
+  <meta name="viewport" content="width=divice-width, initial-scale=1" id="ivib"/>
+  <title id="i51x">Fiasco
+  </title>
+  <body bgcolor="#000000"></body>
+</div>
+<div id="ih6j">
+</div>
+<div id="i2nr">
+</div>
+<script>var items = document.querySelectorAll('#ih6j');
+  for (var i = 0, len = items.length; i < len; i++) {
+    (function(){
+      var e=this,t=JSON.parse('["FIASCO"]'),r=function(e){
+        return parseInt(e,10)||0}
+      ,n=function(e){
+        return!!e}
+      ,o=function(){
+        var o=e;
+        o.innerHTML='<span></span>';
+        var c=parseInt('Infinity',10),s={
+          typeSpeed:r('120'),startDelay:r('1000'),backDelay:r('7000'),backSpeed:r('10'),smartBackspace:n('true'),fadeOut:n(''),fadeOutClass:'typed-fade-out',fadeOutDelay:r('500'),shuffle:n(''),loop:n(''),loopCount:isNaN(c)?1/0:c,showCursor:n('true'),cursorChar:'|',autoInsertCss:n('true'),bindInputFocusEvents:n(''),attr:'',contentType:'html'};
+        t&&t.length&&(s.strings=t),new Typed(o.children[0],s)};
+      if(window.Typed)o();
+      else{
+        var c=document.createElement('script');
+        c.src='https://cdn.jsdelivr.net/npm/typed.js@2.0.11',c.onload=o,document.head.appendChild(c)}
+    }
+     .bind(items[i]))();
+  }
+  var items = document.querySelectorAll('#i2nr');
+  for (var i = 0, len = items.length; i < len; i++) {
+    (function(){
+      var e=this,t=JSON.parse('["O melhor podcast que o Brasil não quer"]'),r=function(e){
+        return parseInt(e,10)||0}
+      ,n=function(e){
+        return!!e}
+      ,o=function(){
+        var o=e;
+        o.innerHTML='<span></span>';
+        var c=parseInt('Infinity',10),s={
+          typeSpeed:r('10'),startDelay:r('3500'),backDelay:r('7000'),backSpeed:r('10'),smartBackspace:n(''),fadeOut:n(''),fadeOutClass:'typed-fade-out',fadeOutDelay:r('500'),shuffle:n(''),loop:n('true'),loopCount:isNaN(c)?1/0:c,showCursor:n('true'),cursorChar:'',autoInsertCss:n('true'),bindInputFocusEvents:n(''),attr:'',contentType:'html'};
+        t&&t.length&&(s.strings=t),new Typed(o.children[0],s)};
+      if(window.Typed)o();
+      else{
+        var c=document.createElement('script');
+        c.src='https://cdn.jsdelivr.net/npm/typed.js@2.0.11',c.onload=o,document.head.appendChild(c)}
+    }
+     .bind(items[i]))();
+  }
+</script>
+<style>* {
+  box-sizing: border-box;
+  }
+  body {
+    margin: 0;
+  }
+  #ih6j{
+    width:0;
+    font-family:Times New Roman, Times, serif;
+    font-size:72px;
+    color:#ffffff;
+    line-height:125px;
+    text-decoration:underline;
+    margin:0 0 0 15px;
+  }
+  body{
+    background-image:none;
+    background-repeat:repeat;
+    background-position:left top;
+    background-attachment:scroll;
+    background-size:auto;
+  }
+  #i2nr{
+    margin:-25px 0 0 15px;
+    color:#ffffff;
+  }
+  @keyframes fadeEffect{
+    from{
+      opacity:0;
+    }
+    to{
+      opacity:1;
+    }
+  }
+</style>
