--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 <div id="ih4v">
   <meta charset="utf-8" id="idy6"/>
   <meta name="viewport" content="width=divice-width, initial-scale=1" id="ivib"/>
