--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-
+<!DOCTYPE html>
+<html>
+<head> 
+    <link rel="icon" type="image/png" href="/favicon.png"/>
+    <link rel="icon" type="image/png" href="favicon.png"/>
+</head>
+  
 <div id="ih4v">
   <meta charset="utf-8" id="idy6"/>
   <meta name="viewport" content="width=divice-width, initial-scale=1" id="ivib"/>
