--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
   <meta name="viewport" content="width=divice-width, initial-scale=1" id="ivib"/>
   <title id="i51x">Fiasco
   </title>
-  <body bgcolor="#000000"></body>
 </div>
 <div id="ih6j">
 </div>
 <div id="i2nr">
 </div>
+<div id="iqx1">Vinícius L. &amp; Miguel D.
+</div>
 <script>var items = document.querySelectorAll('#ih6j');
   for (var i = 0, len = items.length; i < len; i++) {
     (function(){
-      var e=this,t=JSON.parse('["FIASCO."]'),r=function(e){
+      var e=this,t=JSON.parse('["FIASCO"]'),r=function(e){
         return parseInt(e,10)||0}
       ,n=function(e){
         return!!e}
@@ -44,7 +45,7 @@
         var o=e;
         o.innerHTML='<span></span>';
         var c=parseInt('Infinity',10),s={
-          typeSpeed:r('10'),startDelay:r('3500'),backDelay:r('7000'),backSpeed:r('10'),smartBackspace:n(''),fadeOut:n(''),fadeOutClass:'typed-fade-out',fadeOutDelay:r('500'),shuffle:n(''),loop:n('true'),loopCount:isNaN(c)?1/0:c,showCursor:n('true'),cursorChar:'',autoInsertCss:n('true'),bindInputFocusEvents:n(''),attr:'',contentType:'html'};
+          typeSpeed:r('10'),startDelay:r('3500'),backDelay:r('7000'),backSpeed:r('10'),smartBackspace:n('true'),fadeOut:n(''),fadeOutClass:'typed-fade-out',fadeOutDelay:r('500'),shuffle:n(''),loop:n(''),loopCount:isNaN(c)?1/0:c,showCursor:n('true'),cursorChar:'',autoInsertCss:n('true'),bindInputFocusEvents:n(''),attr:'',contentType:'html'};
         t&&t.length&&(s.strings=t),new Typed(o.children[0],s)};
       if(window.Typed)o();
       else{
@@ -69,16 +70,19 @@
     text-decoration:underline;
     margin:0 0 0 15px;
   }
-  body{
-    background-image:none;
-    background-repeat:repeat;
-    background-position:left top;
-    background-attachment:scroll;
-    background-size:auto;
-  }
   #i2nr{
-    margin:-25px 0 0 19px;
+    margin:-25px 0 0 15px;
     color:#ffffff;
+  }
+  #iqx1{
+    font-family:Times New Roman, Times, serif;
+    font-size:14px;
+    color:#ffffff;
+    margin:785px 0 0 0;
+    text-align:center;
+    height:auto;
+    min-height:auto;
+    max-width:auto;
   }
   @keyframes fadeEffect{
     from{
