--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <link rel="icon" type="image/png" href="/favicon.png"/>
 <link rel="icon" type="image/png" href="favicon.png"/>
 
+<body bgcolor="#000000"></body>
 
 <div id="ih4v">
   <meta charset="utf-8" id="idy6"/>
@@ -11,6 +12,8 @@
 <div id="ih6j">
 </div>
 <div id="i2nr">
+</div>
+<div id="iqx1">Vinícius L. &amp; Miguel D.
 </div>
 <script>var items = document.querySelectorAll('#ih6j');
   for (var i = 0, len = items.length; i < len; i++) {
@@ -43,7 +46,7 @@
         var o=e;
         o.innerHTML='<span></span>';
         var c=parseInt('Infinity',10),s={
-          typeSpeed:r('10'),startDelay:r('3500'),backDelay:r('7000'),backSpeed:r('10'),smartBackspace:n('true'),fadeOut:n(''),fadeOutClass:'typed-fade-out',fadeOutDelay:r('500'),shuffle:n(''),loop:n(''),loopCount:isNaN(c)?1/0:c,showCursor:n('true'),cursorChar:'',autoInsertCss:n('true'),bindInputFocusEvents:n(''),attr:'',contentType:'html'};
+          typeSpeed:r('10'),startDelay:r('3500'),backDelay:r('7000'),backSpeed:r('10'),smartBackspace:n('true'),fadeOut:n(''),fadeOutClass:'typed-fade-out',fadeOutDelay:r('500'),shuffle:n(''),loop:n('true'),loopCount:isNaN(c)?1/0:c,showCursor:n('true'),cursorChar:'',autoInsertCss:n('true'),bindInputFocusEvents:n(''),attr:'',contentType:'html'};
         t&&t.length&&(s.strings=t),new Typed(o.children[0],s)};
       if(window.Typed)o();
       else{
@@ -71,6 +74,16 @@
   #i2nr{
     margin:-25px 0 0 15px;
     color:#ffffff;
+  }
+  #iqx1{
+    font-family:Times New Roman, Times, serif;
+    font-size:14px;
+    color:#ffffff;
+    margin:785px 0 0 0;
+    text-align:center;
+    height:auto;
+    min-height:auto;
+    max-width:auto;
   }
   @keyframes fadeEffect{
     from{
