--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <body bgcolor="#000000"></body>
 
+alteraraqui
+
 <div id="ih4v">
   <meta charset="utf-8" id="idy6"/>
   <meta name="viewport" content="width=divice-width, initial-scale=1" id="ivib"/>
@@ -46,7 +48,7 @@
         var o=e;
         o.innerHTML='<span></span>';
         var c=parseInt('Infinity',10),s={
-          typeSpeed:r('10'),startDelay:r('3500'),backDelay:r('7000'),backSpeed:r('10'),smartBackspace:n('true'),fadeOut:n(''),fadeOutClass:'typed-fade-out',fadeOutDelay:r('500'),shuffle:n(''),loop:n('true'),loopCount:isNaN(c)?1/0:c,showCursor:n('true'),cursorChar:'',autoInsertCss:n('true'),bindInputFocusEvents:n(''),attr:'',contentType:'html'};
+          typeSpeed:r('10'),startDelay:r('3500'),backDelay:r('7000'),backSpeed:r('10'),smartBackspace:n(''),fadeOut:n(''),fadeOutClass:'typed-fade-out',fadeOutDelay:r('500'),shuffle:n(''),loop:n(''),loopCount:isNaN(c)?1/0:c,showCursor:n('true'),cursorChar:'',autoInsertCss:n('true'),bindInputFocusEvents:n(''),attr:'',contentType:'html'};
         t&&t.length&&(s.strings=t),new Typed(o.children[0],s)};
       if(window.Typed)o();
       else{
@@ -84,6 +86,7 @@
     height:auto;
     min-height:auto;
     max-width:auto;
+    align-items:flex-end;
   }
   @keyframes fadeEffect{
     from{
