--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script>var items = document.querySelectorAll('#ih6j');
   for (var i = 0, len = items.length; i < len; i++) {
     (function(){
-      var e=this,t=JSON.parse('["FIASCO"]'),r=function(e){
+      var e=this,t=JSON.parse('["FIASCO."]'),r=function(e){
         return parseInt(e,10)||0}
       ,n=function(e){
         return!!e}
